index.html contains headers, a paragraph with a list, and a link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <title>My test page</title>
   </head>
   <body>
+  	<h1>Deer by a Mountain Lake in Summer</h1>
+   
     <img src="images/background-landscape.jpg" alt="Deer by a Mountain Lake in Summer">
+	
+	<h2>My top level heading</h2>
+	<h3>My subheading</h3>
+	<h4>My sub-subheading</h4>
+
+	<p>The deer are very pretty, but the lake is:</p>
+    
+	<ul> 
+	  <li>Cold</li>
+	  <li>Hard to Reach</li>
+	  <li>Smelly</li>
+	</ul>
+
+	<p>,but beautiful none the less.</p>
+	<a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a>
   </body>
 </html>
